<resources>
    <string name="app_name">OCBC App</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_transfer">Transfer</string>
    <string name="btn_topup">Top Up</string>
    <string name="btn_login_register">Login or Register</string>
    <string name="lbl_balance">Your balance:</string>
    <string name="txt_name">Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_amount">Amount</string>
    <string name="lbl_transferquestion">To : </string>
    <string name="btn_cancel">Cancel</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Username must be more than 2 characters</string>
    <string name="welcome">Welcome, </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_password">Password must be >5 characters</string>

</resources>